DS-493 fix ableplayer transcript contrast in bg-color blocks

--- a/source/_patterns/06-helpers/_video.scss
+++ b/source/_patterns/06-helpers/_video.scss
@@ -1,9 +1,25 @@
 /*------------------------------------------------------------------------------
 Helpers: Video
 --------------------------------------------------------------------------------
+1. General styles
+2. AblePlayer fixes
+--------------------------------------------------------------------------------
+1. General styles
 ------------------------------------------------------------------------------*/
 .embed-container iframe{
  width: 100%;
  height: auto;
  aspect-ratio: 16 / 9;
+}
+
+/*------------------------------------------------------------------------------
+2. AblePlayer fixes
+------------------------------------------------------------------------------*/
+div[class*='-bg'] {
+  .able-transcript {
+    h4, 
+    span {
+      color: var(--black);
+    }
+  }
 }
